# harmony

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
assets/: preface-colophon.tex
assets/_assets/: blank.tex
ci/: requirements.txt
harmony/: ScoreTemplate.py  __init__.py  __metadata__  __metadata__.py  library.py  stylesheet.ily  test.py  text-markups.ily  tools.py
harmony/builds/: .gitignore
harmony/builds/_assets/: preface-body.tex  preface-colophon.tex
harmony/builds/arch-a-score/: .01.ily.tags  .02.ily.tags  .03.ily.tags  .04.ily.tags  .04.ly.tags  .05.ily.tags  .05.ly.tags  .06.ily.tags  .07.ly.tags  .08.ily.tags  .09.ily.tags  .09.ly.tags  .10.ily.tags  .11.ily.tags  .11.ly.tags  .14.ly.tags  .15.ly.tags  .16.ily.tags  .17.ily.tags  .19.ly.tags  .21.ly.tags  .23.ily.tags  .23.ly.tags  .24.ly.tags  .25.ily.tags  .25.ly.tags  .26.ily.tags  .26.ly.tags  .28.ly.tags  .metadata  .tags  __metadata__  __metadata__.py  back-cover.tex  front-cover.tex  layout.ily  layout.ly  layout.py  (+5 more)
harmony/etc/: program-notes.rtf  text.txt  to-do.md  to-do.txt
harmony/materials/: __init__.py
harmony/sections/: stylesheet.ily
harmony/segments/: stylesheet.ily
harmony/stylesheets/: contexts.ily  markups.ily  nonfirst-segment.ily  stylesheet.ily  text-markups.ily
harmony/tools/: ScoreTemplate.py  SegmentMaker.py  __init__.py  begin_end_rhythm.py  bfl_transition_rhythm.py  margin_markup.py  superball_style.py  upbeat_attack.py
source/harmony/: __init__.py  library.py  stylesheet.ily  text-markups.ily
(+1618 files in other folders)
