[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harmony"
version = "3.31"
description = "( H A R M O NY ) (2019) for narrator & nine players"
authors = [{ name = "Trevor BaÄa", email = "trevor.baca@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["abjad", "lilypond", "music composition", "music notation"]
dependencies = ["abjad>=3.31"]

[project.urls]
Homepage = "https://github.com/trevorbaca/harmony"

[tool.setuptools]
packages = ["harmony"]
package-dir = { "" = "source" }
